# shopping_list

./: .env_template  .gitignore  Dockerfile  MANIFEST.in  README.md  compose.yaml  install.sh  pyproject.toml  redis.conf  setup.py  tox.ini
src/shopping_list/app/: __init__.py  app.py  calendar.py  commands.py  config.py  model.py  repo.py  unit_of_work.py  wsgi.py
src/shopping_list/config/: secret_config_example
src/shopping_list/sql/: create_tables.sql  scratch
src/shopping_list/static/js/: ingredients.js  new_field.js
src/shopping_list/templates/: base.html  index.html  list.html  recipe_all.html  recipe_single.html
src/shopping_list/views/: home.py  list.py  recipe.py
tests/: conftest.py  test_calendar.py  test_model.py  test_repo.py  test_unit_of_work.py
tests/integration/: test_views_home.py  test_views_list.py  test_views_recipe.py
tests/unit/: test_model.py  test_repo.py  test_unit_of_work.py
